# babs

./: .gitignore  Doxyfile  LICENSE  README.md  meson.build
src/: client.cpp  meson.build  packet.h  server.cpp  session.h
src/client/: babs.cmb  babs.ui  client.cpp  client.h  gresource.xml  gui.cpp  main.cpp  meson.build
src/common/: meson.build  packet.cpp  packet.h  session.cpp  session.h
src/include/: session.h
src/server/: main.cpp  meson.build  server.cpp  server.h
