project('babs', 'cpp', default_options : [ 'buildtype=debug', 'warning_level=2' ])
subdir('src/server')
subdir('src/client')
boost_dep = dependency('boost')
gtkmm_dep = dependency('gtkmm-4.0')
executable('server', sources : server_src, dependencies : [boost_dep])
executable('client', sources : client_src, dependencies : [boost_dep, gtkmm_dep])
