project('babs', 'cpp', default_options : [ 'buildtype=debug', 'warning_level=2', 'cpp_std=c++20' ])
subdir('src/common')
subdir('src/server')
subdir('src/client')
boost_dep = dependency('boost')
gtkmm_dep = dependency('gtkmm-4.0')
adwaita_dep = dependency('libadwaita-1')
executable('server', sources : common_src + server_src, dependencies : [boost_dep])
executable('client', sources : common_src + client_src, dependencies : [boost_dep, adwaita_dep, gtkmm_dep])
